@@ -103,7 +103,7 @@ public class OdysseyCasesDailyDump {
                 () -> jwtToken,
                 "https://openlattice-media-storage.s3.us-gov-west-1.amazonaws.com" );
 
-        missionControl.prepare( flights, false, List.of(), Set.of()).launch( 150 );
+        missionControl.prepare( flights, false, ImmutableList.of(), ImmutableSet.of()).launch( 150 );
 
     }
 
